Ensure lines are not too long in .tex document

--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -52,8 +52,9 @@
 \begin{minipage}[t]{0.4\textwidth} % 40% of the page width for the introduction text
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
-	Jack of all trades, master of none - having a broad software development experience and deep passion for work,
-	I seek to bring state-of-art solutions to anny endeavour I have currenty embarked upon. \\ \\
+	Jack of all trades, master of none - having a broad software development experience 
+	and deep passion for work, I seek to bring state-of-art solutions to anny endeavour
+	I have currenty embarked upon. \\ \\
 	Above all, I enjoy working with complex systems and simplfying them in the process.
 
 \end{minipage}
@@ -110,7 +111,8 @@
 
 \begin{entrylist}
 	\entry
-		{Nov 2019 -- Present\\\footnotesize{IT Expert Developer}\\Nov 2018 -- Nov 2019\\\footnotesize{Senior IT Developer}}
+		{Nov 2019 -- Present\\\footnotesize{IT Expert Developer}
+		\\Nov 2018 -- Nov 2019\\\footnotesize{Senior IT Developer}}
 		{Scala Tech Lead (DevOps Developer)}
 		{Nordea}
 		{
@@ -122,9 +124,11 @@
 			\texttt{Elastic Search}\slashsep
 			\texttt{Kafka}\\
 
-			Developing proprietary solution akin to \href{https://egeria.odpi.org}{Egeria},
-			based upon microservices architecture and realising high availability demands. The solution
-			allos users to search and exchange different metadata used by wide range of internal teams.\\ \\
+			Developing proprietary solution akin to 
+			\href{https://egeria.odpi.org}{Egeria}, based upon microservices 
+			architecture and realising high availability demands. The solution
+			allos users to search and exchange different metadata used by wide
+			range of internal teams.\\ \\
 			\lorem\lorem\lorem
 		}
 	\entry
@@ -139,9 +143,11 @@
 			\texttt{OpenShift}\slashsep
 			\texttt{Grafana}\\
 
-			I have created the PoC of container-based application platform, build from the ground up with automation, policy enforcement, 
+			I have created the PoC of container-based application platform, build 
+			from the ground up with automation, policy enforcement, 
 			openness and configurability in mind. 
-			It has been constructed from exclusively open-source components to allow for maximum synergy with current cloud-base 
+			It has been constructed from exclusively open-source components to
+			allow for maximum synergy with current cloud-base 
 			tools and practices. \\
 			PoC received very good initial feedback from the developers, 
 			who found out it significantly simplified their every-day work.\\
@@ -160,10 +166,15 @@
 			\texttt{AngularJS 1}\slashsep
 			\texttt{Redis}\\
 
-			I was part of team developing internal test management and reporting system which processed significant amounts of data daily,
-			giving the end-user ability to perform flexible, customizable lookups and follow latest data trends.
-			Solution was built with micro-services oriented architecture, with focus being placed on high avaiability and scalability.
-			Working in fully cross-functional manner allowed me to deliver improvements in infrastructure, web, backend and database layers of the system.\\
+			I was part of team developing internal test management and reporting 
+			system which processed significant amounts of data daily, giving 
+			the end-user ability to perform flexible, customizable lookups
+			and follow latest data trends.
+			Solution was built with micro-services oriented architecture, with 
+			focus being placed on high avaiability and scalability.
+			Working in fully cross-functional manner allowed me to deliver 
+			improvements in infrastructure, web, backend and database layers 
+			of the system.\\
 			\lorem\lorem\lorem
 		}
 	\entry
@@ -177,9 +188,10 @@
 			\texttt{.NET MVC}\slashsep
 			\texttt{Workflows}\\
 
-			Single-handedly revamped automation/workflow solution which integrated multiple internal proprietary tools, 
-			needed for processing changes to graphical driver. As a result, time-to-delivery of driver patches was decreased, 
-			and I was awarded with Department Recognition Award.
+			Single-handedly revamped automation/workflow solution which integrated
+			multiple internal proprietary tools, needed for processing changes to 
+			graphical driver. As a result, time-to-delivery of driver patches was 
+			decreased, and I was awarded with Department Recognition Award.
 		}
 	\entry
 		{Jul 2013 -- Aug 2013\\\footnotesize{Internship}}
@@ -192,9 +204,11 @@
 			\texttt{Validation}\slashsep
 			\texttt{Continous Integration}\\
 
-			I was part of the validation team responsible for testing whether mobile app meets the user expectations
-			and covers all gathered user stories. Since the app was written in Java for Android, all testing was also done in Java.
-			Most of the skills acquired relate to proper testing and systems integration.
+			I was part of the validation team responsible for testing whether 
+			mobile app meets the user expectations and covers all gathered user 
+			stories. Since the app was written in  Java for Android, all testing 
+			was also done in Java. Most of the skills acquired relate to proper 
+			testing and systems integration.
 		}
 	\entry
 		{Sep 2011 -- Mar 2014\\\footnotesize{Freelance}}
@@ -207,11 +221,12 @@
 			\texttt{.NET MVC}\slashsep
 			\texttt{Node.js}\\
 
-			Worked as a website designer and backend developer - have written couple of static websites
-			(adhering to responsive design) and handful of ASP.NET MVC based pages. Most notably, I have 
-			co-authored portal, where people could interact with health specialists.\\
-			The skills acquired mostly relate to designing a funtinal webiste, as well as technicalities of
-			web protocols.
+			Worked as a website designer and backend developer - have written 
+			couple of static websites (adhering to responsive design) and handful 
+			of ASP.NET MVC based pages.	Most notably, I have co-authored portal, 
+			where people could interact with health specialists.\\
+			The skills acquired mostly relate to designing a funtinal webiste, as 
+			well as technicalities of web protocols.
 		}
 \end{entrylist}
 
@@ -277,11 +292,13 @@
 \vspace{0.75cm}
 
 \begin{minipage}[t]{1\textwidth}
-	I hereby agree to the processing of personal data provided in this document for realising the recruitment process pursuant
-	to the Personal Data Protection Act of 10 May 2018 (Journal of Laws 2018, item 1000) and in agreement with Regulation (EU) 
-	2016/679 of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard 
-	to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC 
-	(General Data Protection Regulation).
+	I hereby agree to the processing of personal data provided in this document for 
+	realising the recruitment process pursuant to the Personal Data Protection Act
+	of 10 May 2018 (Journal of Laws 2018, item 1000) and in agreement with Regulation (EU) 
+	2016/679 of the European Parliament and of the Council of 27 April 2016 on the 
+	protection of natural persons with regard to the processing of personal data and on 
+	the free movement of such data, and repealing Directive 95/46/EC (General Data 
+	Protection Regulation).
 \end{minipage}
 
 \end{document}
