Updated information in the CV

--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -53,7 +53,7 @@
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
 	Jack of all trades, master of none - having a broad software development experience 
-	and deep passion for work, I seek to bring state-of-art solutions to anny endeavour
+	and deep passion for work, I seek to bring state-of-art solutions to any endeavour
 	I have currenty embarked upon. \\ \\
 	Above all, I enjoy working with complex systems and simplfying them in the process.
 
@@ -82,7 +82,10 @@
 
 	\cvsect{Craftmanship}
 
-	\lorem\lorem
+	As a firm supporter of \href{https://manifesto.softwarecraftmanship.org/}{Software craftmanship manifesto},
+	I took pride in my work and always strive to deliver solutions which are not only functional, 
+	but well-crafted and well thought-out. I am known for implementing solutions built to last.
+
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.3\textwidth}
@@ -90,7 +93,9 @@
 	
 	\cvsect{Ownership}
 	
-	\lorem\lorem
+	When given a task, project or issue to solve, I always take full responibility for the outcome - doing my upmost
+	best to deliver solution that is tailor-suited for the occasion, whilst fostering cooperative approach in development
+	process, often times breaking well-established siloses.
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.3\textwidth}
@@ -98,7 +103,8 @@
 	
 	\cvsect{Creativity}
 	
-	\lorem\lorem
+	Throughout my career, I have been frequently recognized as person who challanges status quo and implements disruptive
+	improvements to exsiting processes. I have a track record of resolving various issues in innovative manner. 
 \end{minipage}
 
 \vspace{0.75cm}
@@ -116,11 +122,11 @@
 		{Scala Tech Lead (DevOps Developer)}
 		{Nordea}
 		{
-			\texttt{Nix}\slashsep
-			\texttt{Bazel}\slashsep
-			\texttt{Kubernetes}\slashsep
-			\texttt{Argo}\slashsep
 			\texttt{Scala}\slashsep
+			\texttt{Nix}\slashsep
+			\texttt{Kubernetes}\slashsep
+			\texttt{Bazel}\slashsep
+			\texttt{Argo}\slashsep
 			\texttt{Elastic Search}\slashsep
 			\texttt{Kafka}\\
 
@@ -129,7 +135,11 @@
 			architecture and realising high availability demands. The solution
 			allos users to search and exchange different metadata used by wide
 			range of internal teams.\\ \\
-			\lorem\lorem\lorem
+			Most notably, I was responsible for planning and implementation of 
+			ecosystem redesign, which improved cross-systems integrations and 
+			solution flexibility. Due to changes made, the crutial ability of 
+			the project to adjust to ever-changing landscape of Data Lake was
+			reduce significantly (dropped from months to days). \\
 		}
 	\entry
 		{Apr 2018 -- Nov 2018\\\footnotesize{IT Infrastructure Specialist}}
@@ -150,8 +160,10 @@
 			allow for maximum synergy with current cloud-base 
 			tools and practices. \\
 			PoC received very good initial feedback from the developers, 
-			who found out it significantly simplified their every-day work.\\
-			\lorem\lorem
+			who found out it significantly simplified their every-day work.\\ \\
+			Most notably, the platform allowed multiple teams within the company
+			to increase their work velocity and take ownership of their full technological
+			stack.
 		}
 	\entry
 		{Mar 2015 -- Apr 2018\\\footnotesize{Graphics Software Engineer}}
@@ -174,8 +186,10 @@
 			focus being placed on high avaiability and scalability.
 			Working in fully cross-functional manner allowed me to deliver 
 			improvements in infrastructure, web, backend and database layers 
-			of the system.\\
-			\lorem\lorem\lorem
+			of the system.\\ \\
+			The key acomplishment was the redesign of how system messages are 
+			handled, which improved overall solution peformance and adaptability to
+			change.
 		}
 	\entry
 		{Mar 2014 -- Mar 2015\\\footnotesize{Internship}}
@@ -289,7 +303,7 @@
 
 %----------------------------------------------------------------------------------------
 
-\vspace{0.75cm}
+\vspace{3.00cm}
 
 \begin{minipage}[t]{1\textwidth}
 	I hereby agree to the processing of personal data provided in this document for 
