Fix typos in CV

--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -54,8 +54,8 @@
 	
 	Jack of all trades, master of none - having a broad software development experience 
 	and deep passion for work, I seek to bring state-of-art solutions to any endeavour
-	I have currenty embarked upon. \\ \\
-	Above all, I enjoy working with complex systems and simplfying them in the process.
+	I have currently embarked upon. \\ \\
+	Above all, I enjoy working with complex systems and simplifying them in the process.
 
 \end{minipage}
 \hfill % Whitespace between
@@ -93,9 +93,9 @@
 	
 	\cvsect{Ownership}
 	
-	When given a task, project or issue to solve, I always take full responibility for the outcome - doing my upmost
+	When given a task, project or issue to solve, I always take full responsibility for the outcome - doing my upmost
 	best to deliver solution that is tailor-suited for the occasion, whilst fostering cooperative approach in development
-	process, often times breaking well-established siloses.
+	process, often times breaking well-established silos.
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.3\textwidth}
@@ -103,8 +103,8 @@
 	
 	\cvsect{Creativity}
 	
-	Throughout my career, I have been frequently recognized as person who challanges status quo and implements disruptive
-	improvements to exsiting processes. I have a track record of resolving various issues in innovative manner. 
+	Throughout my career, I have been frequently recognized as person who challenges status quo and implements disruptive
+	improvements to existing processes. I have a track record of resolving various issues in innovative manner. 
 \end{minipage}
 
 \vspace{0.75cm}
@@ -133,11 +133,11 @@
 			Developing proprietary solution akin to 
 			\href{https://egeria.odpi.org}{Egeria}, based upon microservices 
 			architecture and realising high availability demands. The solution
-			allos users to search and exchange different metadata used by wide
+			allows users to search and exchange different metadata used by wide
 			range of internal teams.\\ \\
 			Most notably, I was responsible for planning and implementation of 
 			ecosystem redesign, which improved cross-systems integrations and 
-			solution flexibility. Due to changes made, the crutial ability of 
+			solution flexibility. Due to changes made, the crucial ability of 
 			the project to adjust to ever-changing landscape of Data Lake was
 			reduce significantly (dropped from months to days). \\
 		}
@@ -167,7 +167,7 @@
 		}
 	\entry
 		{Mar 2015 -- Apr 2018\\\footnotesize{Graphics Software Engineer}}
-		{Full Stack Develper}
+		{Full Stack Developer}
 		{Intel Corporation Poland}
 		{
 			\texttt{Python}\slashsep
@@ -183,12 +183,12 @@
 			the end-user ability to perform flexible, customizable lookups
 			and follow latest data trends.
 			Solution was built with micro-services oriented architecture, with 
-			focus being placed on high avaiability and scalability.
+			focus being placed on high availability and scalability.
 			Working in fully cross-functional manner allowed me to deliver 
 			improvements in infrastructure, web, backend and database layers 
 			of the system.\\ \\
-			The key acomplishment was the redesign of how system messages are 
-			handled, which improved overall solution peformance and adaptability to
+			The key accomplishment was the redesign of how system messages are 
+			handled, which improved overall solution performance and adaptability to
 			change.
 		}
 	\entry
@@ -216,7 +216,7 @@
 			\texttt{Android}\slashsep
 			\texttt{Spring}\slashsep
 			\texttt{Validation}\slashsep
-			\texttt{Continous Integration}\\
+			\texttt{Continuous Integration}\\
 
 			I was part of the validation team responsible for testing whether 
 			mobile app meets the user expectations and covers all gathered user 
@@ -239,7 +239,7 @@
 			couple of static websites (adhering to responsive design) and handful 
 			of ASP.NET MVC based pages.	Most notably, I have co-authored portal, 
 			where people could interact with health specialists.\\
-			The skills acquired mostly relate to designing a funtinal webiste, as 
+			The skills acquired mostly relate to designing a functional website, as 
 			well as technicalities of web protocols.
 		}
 \end{entrylist}
@@ -275,7 +275,7 @@
 
 	\cvsect{Languages}
 
-	\textbf{English} - proficent\\
+	\textbf{English} - proficient\\
 	\textbf{German} - rudimentary\\
 	\textbf{Polish} - native
 \end{minipage}
