Reflect latest job change

--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -117,7 +117,20 @@
 
 \begin{entrylist}
 	\entry
-		{Nov 2019 -- Present\\\footnotesize{IT Expert Developer}
+	  {Mar 2020 -- Present\\\footnotesize{Software Engineer}}
+		{Platform Research Engineer}
+		{Dynatrace}
+		{
+			\texttt{Python}\slashsep
+			\texttt{Nix}\slashsep
+			\texttt{Kubernetes}\slashsep
+			\texttt{Bazel}
+
+			Research, prototyping and delivering high-impact 
+			integrations for the Dynatrace platform.
+	  }
+	\entry
+		{Nov 2019 -- Mar 2020\\\footnotesize{IT Expert Developer}
 		\\Nov 2018 -- Nov 2019\\\footnotesize{Senior IT Developer}}
 		{Scala Tech Lead (DevOps Developer)}
 		{Nordea}
@@ -303,7 +316,7 @@
 
 %----------------------------------------------------------------------------------------
 
-\vspace{3.00cm}
+\vspace{1.00cm}
 
 \begin{minipage}[t]{1\textwidth}
 	I hereby agree to the processing of personal data provided in this document for 
