[fix] Typo: Univeristy --> University

--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -267,7 +267,7 @@
 	\entry
 		{2014 -- 2016}
 		{Master of Engineering, Computer Science}
-		{Gdańsk Univeristy of Technology}
+		{Gdańsk University of Technology}
 		{
 			Specialization: Distributed Applications and Internet Services \\
 			Studies were conducted in English language
@@ -275,7 +275,7 @@
 	\entry
 		{2010 -- 2014}
 		{Bachelor of Engineering, Computer Science}
-		{Gdańsk Univeristy of Technology}
+		{Gdańsk University of Technology}
 		{}
 \end{entrylist}
 
