--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -118,7 +118,7 @@
 \begin{entrylist}
 	\entry
 	  {Mar 2020 -- Present\\\footnotesize{Software Engineer}}
-		{Platform Research Engineer}
+		{Kubernetes Platform Engineer}
 		{Dynatrace}
 		{
 			\texttt{Python}\slashsep
@@ -129,8 +129,22 @@
 			\texttt{Rancher}\slashsep
 			\texttt{AKS/EKS}\\
 
-			Developing managed Kubernetes platform and application
-			delivery systems.
+			Leading the development of Dynatrace deployment systems and processes targeting Kubernetes in
+			multiple flavours: AKS, EKS, GKE, Openshift, on prem.
+	  }
+	\entry
+	  {Mar 2020 -- Sep 2020\\\footnotesize{Software Engineer}}
+		{Platform Research Engineer}
+		{Dynatrace}
+		{
+			\texttt{Python}\slashsep
+			\texttt{Nix}\slashsep
+			\texttt{Azure}\slashsep
+			\texttt{AWS}\\
+
+			Researched new valuable integrations to be added to Dynatrace platform. 
+			Main area of impact made: scaffolding tool for preparing integration with any
+			Azure / AWS service.
 	  }
 	\entry
 		{Nov 2019 -- Mar 2020\\\footnotesize{IT Expert Developer}
@@ -250,13 +264,6 @@
 			\texttt{Bootstrap}\slashsep
 			\texttt{.NET MVC}\slashsep
 			\texttt{Node.js}\\
-
-			Worked as a website designer and backend developer - have written 
-			couple of static websites (adhering to responsive design) and handful 
-			of ASP.NET MVC based pages.	Most notably, I have co-authored portal, 
-			where people could interact with health specialists.\\
-			The skills acquired mostly relate to designing a functional website, as 
-			well as technicalities of web protocols.
 		}
 \end{entrylist}
 
@@ -322,13 +329,13 @@
 \vspace{1.00cm}
 
 \begin{minipage}[t]{1\textwidth}
-	I hereby agree to the processing of personal data provided in this document for 
+	\footnotesize{I hereby agree to the processing of personal data provided in this document for 
 	realising the recruitment process pursuant to the Personal Data Protection Act
 	of 10 May 2018 (Journal of Laws 2018, item 1000) and in agreement with Regulation (EU) 
 	2016/679 of the European Parliament and of the Council of 27 April 2016 on the 
 	protection of natural persons with regard to the processing of personal data and on 
 	the free movement of such data, and repealing Directive 95/46/EC (General Data 
-	Protection Regulation).
+	Protection Regulation).}
 \end{minipage}
 
 \end{document}
