--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -131,7 +131,7 @@
 
 \begin{entrylist}
 	\entry
-	  {Mar 2020 -- Present\\\footnotesize{Software Engineer}}
+	  {Sep 2020 -- Present\\\footnotesize{Software Engineer}}
 		{Kubernetes Platform Engineer}
 		{Dynatrace}
 		{
@@ -139,7 +139,7 @@
 			\texttt{Nix}\slashsep
 			\texttt{Kubernetes}\slashsep
 			\texttt{Bazel}\slashsep
-			\texttt{Azure}\slashsep
+			\texttt{Cuelang}\slashsep
 			\texttt{Rancher}\slashsep
 			\texttt{AKS/EKS}\\
 
