--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -131,7 +131,21 @@
 
 \begin{entrylist}
 	\entry
-	  {Sep 2020 -- Present\\\footnotesize{Software Engineer}}
+	  {May 2021 -- Present\\\footnotesize{Software Engineer}}
+		{Software Developer Productivity Engineer}
+		{Tweag.io}
+		{
+			\texttt{Nix}\slashsep
+			\texttt{Bazel}\slashsep
+			\texttt{Python}\slashsep
+			\texttt{Cpp}\slashsep
+			\texttt{Rust}\\
+
+			Migrated large monorepository encompassing Cpp \& Python to Bazel.
+			Dropped builds \& tests times from hours to minutes, started working on introduction of Remote Execution.
+	  }
+	\entry
+	  {Sep 2020 -- May 2021 \\\footnotesize{Software Engineer}}
 		{Kubernetes Platform Engineer}
 		{Dynatrace}
 		{
