--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -66,7 +66,7 @@
 \begin{minipage}[t]{0.4\textwidth} % 40% of the page width for the introduction text
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
-	Jack of all trades, master of none - having a broad software development experience 
+	Jack of all trades, master of at least one - having a broad software development experience 
 	and deep passion for work, I seek to bring state-of-art solutions to any endeavour
 	I have currently embarked upon. \\ \\
 	Above all, I enjoy working with complex systems and simplifying them in the process.
@@ -77,11 +77,11 @@
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	\begin{barchart}{5.5}
 		\baritem{Python}{80}
-		\baritem{Scala}{50}
+		\baritem{Bazel}{75}
 		\baritem{Kubernetes}{70}
-		\baritem{Microservices}{70}
 		\baritem{Nix}{60}
-		\baritem{Typescript}{50}
+		\baritem{Scala}{50}
+		\baritem{Microservices}{70}
 	\end{barchart}
 \end{minipage}
 
