--- a/agondek-cv.tex
+++ b/agondek-cv.tex
@@ -14,10 +14,11 @@
 	Title={Gondek: Curriculum Vitae},
 	Subject={Gondek: Curriculum Vitae},
 	Keywords={
+		Rust, Bazel, 
 		Containers, Kubernetes, Python, 
 		Nix, Nixpkgs, NixOS, 
 		Scala, Microservices, Functional Programming,
-		Bazel, Argo, NoSQL,
+		Argo, NoSQL,
 		Actor Model Framework,
 	},
 	Author={Aleksander Gondek}
@@ -76,11 +77,11 @@
 \begin{minipage}[t]{0.5\textwidth} % 50% of the page for the skills bar chart
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	\begin{barchart}{5.5}
-		\baritem{Python}{80}
-		\baritem{Bazel}{75}
+		\baritem{Bazel}{80}
+		\baritem{Python}{75}
+		\baritem{Rust}{65}
 		\baritem{Kubernetes}{70}
-		\baritem{Nix}{60}
-		\baritem{Scala}{50}
+		\baritem{Nix}{65}
 		\baritem{Microservices}{70}
 	\end{barchart}
 \end{minipage}
@@ -131,7 +132,21 @@
 
 \begin{entrylist}
 	\entry
-	  {May 2021 -- Present\\\footnotesize{Software Engineer}}
+	  {March 2022 -- Present\\\footnotesize{Senior Software Engineer}}
+		{Tech Lead}
+		{ASML}
+		{
+			\texttt{Rust}\slashsep
+			\texttt{Bazel}\slashsep
+			\texttt{Nix}\slashsep
+			\texttt{Python}\slashsep
+			\texttt{Cpp}\slashsep
+			\texttt{Go}\\
+
+			Leading the migration of gargantuan heterogeneous codebase to Bazel. Spearheading automation tooling responsible for said migration and creating foundational frameworks for developers to build upon. Significantly decreased migration lead and build times. 
+	  }
+	\entry
+	  {May 2021 -- March 2022\\\footnotesize{Software Engineer}}
 		{Software Developer Productivity Engineer}
 		{Tweag.io}
 		{
@@ -190,12 +205,7 @@
 
 			Developing proprietary solution akin to 
 			\href{https://egeria.odpi.org}{Egeria}, based upon microservices 
-			architecture and realising high availability demands. The solution
-			allows users to search and exchange different metadata used by wide
-			range of internal teams.\\ \\
-			Most notably, I was responsible for planning and implementation of 
-			ecosystem redesign, which improved cross-systems integrations and 
-			solution flexibility. Due to changes made, the crucial ability of 
+			architecture and realising high availability demands. Due to changes made, the crucial ability of 
 			the project to adjust to ever-changing landscape of Data Lake was
 			reduce significantly (dropped from months to days). \\
 		}
@@ -259,11 +269,7 @@
 			\texttt{MS-SQL}\slashsep
 			\texttt{.NET MVC}\slashsep
 			\texttt{Workflows}\\
-
-			Single-handedly revamped automation/workflow solution which integrated
-			multiple internal proprietary tools, needed for processing changes to 
-			graphical driver. As a result, time-to-delivery of driver patches was 
-			decreased, and I was awarded with Department Recognition Award.
+			Awarded with Department Recognition Award.s
 		}
 	\entry
 		{Jul 2013 -- Aug 2013\\\footnotesize{Internship}}
@@ -274,13 +280,7 @@
 			\texttt{Android}\slashsep
 			\texttt{Spring}\slashsep
 			\texttt{Validation}\slashsep
-			\texttt{Continuous Integration}\\
-
-			I was part of the validation team responsible for testing whether 
-			mobile app meets the user expectations and covers all gathered user 
-			stories. Since the app was written in  Java for Android, all testing 
-			was also done in Java. Most of the skills acquired relate to proper 
-			testing and systems integration.
+			\texttt{Continuous Integration}\\s
 		}
 	\entry
 		{Sep 2011 -- Mar 2014\\\footnotesize{Freelance}}
